# rag_pipeline_without_vectore_db

./: .gitignore  INDEX.md  README.md  WINDOWS_SETUP.md  embeddings.jsonl  infopark_news.md  pyproject.toml  rag.py  requirements.txt
