[project]
name = "scrapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "mistralai>=2.4.9",
    "numpy>=2.4.6",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
]
